# xsiam-public

./: .gitignore  .pre-commit-config.yaml  README.md  jp-gpds-display-dbotscores.yml  pyproject.toml  requirements-dev.txt
Integrations/: XQL HTTP Collector.yml
Playbooks/: jp-export-content-bundle.yml
automations/: jp-get-case-url.yml  jp-get-egress-ip.yml  jp-get-playbook-by-name.yml  jp-get-script-details.yml  jp-gpds-get-related-host-issues.yml  jp-gpds-get-related-user-issues.yml  jp-normalize-timestamp-for-xql-query.yml  jp-print-md-url.yml  ps-list-to-html.yml  ps-list-to-markdown.yml
